@@ -3308,15 +3308,47 @@ name|isDebugEnabled
 argument_list|()
 condition|)
 block|{
+for|for
+control|(
+name|Map
+operator|.
+name|Entry
+argument_list|<
+name|ApplicationId
+argument_list|,
+name|Credentials
+argument_list|>
+name|entry
+range|:
+name|map
+operator|.
+name|entrySet
+argument_list|()
+control|)
+block|{
 name|LOG
 operator|.
 name|debug
 argument_list|(
-literal|"Retrieved credentials form RM: "
+literal|"Retrieved credentials form RM for "
 operator|+
-name|map
+name|entry
+operator|.
+name|getKey
+argument_list|()
+operator|+
+literal|": "
+operator|+
+name|entry
+operator|.
+name|getValue
+argument_list|()
+operator|.
+name|getAllTokens
+argument_list|()
 argument_list|)
 expr_stmt|;
+block|}
 block|}
 return|return
 name|map
