@@ -1363,23 +1363,17 @@ operator|!=
 literal|null
 condition|)
 block|{
-for|for
-control|(
-name|Token
-argument_list|<
-name|?
-argument_list|>
-name|token
-range|:
-name|systemCredentials
+if|if
+condition|(
+name|LOG
 operator|.
-name|getAllTokens
+name|isDebugEnabled
 argument_list|()
-control|)
+condition|)
 block|{
 name|LOG
 operator|.
-name|info
+name|debug
 argument_list|(
 literal|"Adding new framework-token for "
 operator|+
@@ -1387,9 +1381,12 @@ name|appId
 operator|+
 literal|" for log-aggregation: "
 operator|+
-name|token
+name|systemCredentials
+operator|.
+name|getAllTokens
+argument_list|()
 operator|+
-literal|" user="
+literal|"; userUgi="
 operator|+
 name|userUgi
 argument_list|)
